[project]
name = "apantias"
version = "2.0.5"
authors = [
    { name="Florian Heinrich", email="florianheinrich@gmx.at" },
]
description = "Tools for analysis of data from the DANAE experiment on HEPHY"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tables>=3.10.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "ruff>=0.15.2",
]

[project.urls]
Homepage = "https://github.com/shakamaran/apantias"
Issues = "https://github.com/shakamaran/apantias/issues"

[tool.pylint]
disable = [
    "R0903",
    "R0914",
    "C0301",
    "W0105",
    "E1133",
    "E1101",
]
